--- a/options/train/CLIPIQA/train_CLIPIQA_KIQ20.yml
+++ b/options/train/CLIPIQA/train_CLIPIQA_KIQ20.yml
@@ -1,12 +1,8 @@
 # general settings
-# name: debug_DBCNN_LIVEC
-name: 000_CLIPIQA_RN50_KonIQ10k
-# name: debug_CLIPIQA
-model_type: GeneralIQAModel
-num_gpu: 1  # set num_gpu: 0 for cpu mode
-manual_seed: 123
+# CMD:
+# .\train.py -opt .\options\train\CLIPIQA\train_CLIPIQA_KIQ20.yml --auto_resume
 
-# name: debug_CLIPIQA
+name: 001_CLIPIQA_RN50_KIQ20_initial_Galaxy_A53
 model_type: GeneralIQAModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
@@ -14,11 +10,11 @@ manual_seed: 123
 # dataset and data loader settings
 datasets:
   train:
-    name: koniq10k
+    name: KIQ20
     type: GeneralNRDataset
-    dataroot_target: ../datasets/koniq10k/512x384
-    meta_info_file: ../datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ../datasets/meta_info/koniq10k_official.pkl
+    dataroot_target: ../datasets/KK_dataset/KIQ20_images
+    meta_info_file: ../datasets/meta_info/meta_info_KIQ20Dataset_Galaxy_A53.csv
+    split_file: ../datasets/meta_info/KIQ20Dataset_Galaxy_A53.pkl
     mos_max: 100
 
     augment:
@@ -28,24 +24,21 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 4
-    batch_size_per_gpu: 8
+    num_worker_per_gpu: 2
+    batch_size_per_gpu: 2
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
   val:
-    name: koniq10k
+    name: KIQ20
     type: GeneralNRDataset
-    dataroot_target: ../datasets/koniq10k/512x384
-    meta_info_file: ../datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ../datasets/meta_info/koniq10k_official.pkl
+    dataroot_target: ../datasets/KK_dataset/KIQ20_images
+    meta_info_file: ../datasets/meta_info/meta_info_KIQ20Dataset_Galaxy_A53.csv
+    split_file: ../datasets/meta_info/KIQ20Dataset_Galaxy_A53.pkl
     mos_max: 100
 
-    num_worker_per_gpu: 4
-    batch_size_per_gpu: 8
-
-    # augment:
-    #   center_crop: 384
+    num_worker_per_gpu: 2
+    batch_size_per_gpu: 2
 
 # network structures
 network:
