--- a/options/train/CLIPIQA/train_CLIPIQA_SPAQDataset.yml
+++ b/options/train/CLIPIQA/train_CLIPIQA_SPAQDataset.yml
@@ -1,8 +1,8 @@
 # general settings
 # CMD:
-# .\train.py -opt .\options\train\CLIPIQA\train_CLIPIQA_KIQ20.yml --auto_resume
+# .\train.py -opt .\options\train\CLIPIQA\train_SPAQDataset.yml --auto_resume
 
-name: 001_CLIPIQA_RN50_KIQ20_Austion
+name: 001_SPAQDataset_initial
 model_type: GeneralIQAModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
@@ -10,11 +10,11 @@ manual_seed: 123
 # dataset and data loader settings
 datasets:
   train:
-    name: KIQ20
+    name: SPAQ
     type: GeneralNRDataset
-    dataroot_target: ../datasets/KK_dataset/KIQ20_images
-    meta_info_file: ../datasets/meta_info/meta_info_KIQ20Dataset_Austion.csv
-    split_file: ../datasets/meta_info/KIQ20Dataset_Austion.pkl
+    dataroot_target: ../datasets/SPAQ/TestImage
+    meta_info_file: ../datasets/meta_info/meta_info_SPAQDataset.csv
+    split_file: ../datasets/meta_info/spaq_seed123.pkl
     mos_max: 100
 
     augment:
@@ -30,11 +30,11 @@ datasets:
     prefetch_mode: ~
 
   val:
-    name: KIQ20
+    name: SPAQ
     type: GeneralNRDataset
-    dataroot_target: ../datasets/KK_dataset/KIQ20_images
-    meta_info_file: ../datasets/meta_info/meta_info_KIQ20Dataset_Austion.csv
-    split_file: ../datasets/meta_info/KIQ20Dataset_Austion.pkl
+    dataroot_target: ../datasets/SPAQ/TestImage
+    meta_info_file: ../datasets/meta_info/meta_info_SPAQDataset.csv
+    split_file: ../datasets/meta_info/spaq_seed123.pkl
     mos_max: 100
 
     num_worker_per_gpu: 4
@@ -43,15 +43,15 @@ datasets:
 # network structures
 network:
   type: CLIPIQA 
-  model_type: clipiqa+_kk
+  model_type: clipiqa+
   # backbone: ViT-L/14
   backbone: RN50
-  pretrained: true
+  pretrained: false
   pos_embedding: true
 
 # path
 path:
-  pretrain_network_g: ./net_best.pth
+  pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
 
