--- a/options/train/CNNIQA/train_CNNIQA.yml
+++ b/options/train/CNNIQA/train_CNNIQA.yml
@@ -12,7 +12,10 @@ datasets:
     type: GeneralNRDataset
     dataroot_target: ./datasets/koniq10k/512x384
     meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/train_split_info/koniq10k_official.pkl
+    split_file: ./datasets/meta_info/koniq10k_official.pkl
+    mos_range: [0, 100]
+    lower_better: false 
+    mos_normalize: true
 
     augment:
       hflip: true
@@ -31,7 +34,7 @@ datasets:
     type: GeneralNRDataset
     dataroot_target: ./datasets/koniq10k/512x384
     meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/train_split_info/koniq10k_official.pkl
+    split_file: ./datasets/meta_info/koniq10k_official.pkl
 
     num_worker_per_gpu: 4
     batch_size_per_gpu: 8
@@ -39,6 +42,7 @@ datasets:
 # network structures
 network:
   type: CNNIQA
+  pretrained: false
 
 # path
 path:
@@ -62,7 +66,7 @@ train:
 
   # losses
   mos_loss_opt:
-    type: PLCCLoss
+    type: MSELoss 
     loss_weight: !!float 1.0
 
 # validation settings
