--- a/options/train/HyperNet/train_HyperNet.yml
+++ b/options/train/HyperNet/train_HyperNet.yml
@@ -13,8 +13,10 @@ datasets:
     type: GeneralNRDataset
     dataroot_target: ./datasets/koniq10k/512x384
     meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/train_split_info/koniq10k_official.pkl
-    mos_max: 100
+    split_file: ./datasets/meta_info/koniq10k_official.pkl
+    mos_range: [0, 100]
+    lower_better: false 
+    mos_normalize: true
 
     augment:
       hflip: true
@@ -33,7 +35,7 @@ datasets:
     type: GeneralNRDataset
     dataroot_target: ./datasets/koniq10k/512x384
     meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/train_split_info/koniq10k_official.pkl
+    split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_max: 100
 
     num_worker_per_gpu: 4
@@ -42,6 +44,7 @@ datasets:
 # network structures
 network:
   type: HyperNet
+  pretrained: false
 
 # path
 path:
