--- a/options/train/NIMA/train_NIMA.yml
+++ b/options/train/NIMA/train_NIMA.yml
@@ -1,7 +1,7 @@
 # general settings
 name: debug001_NIMA_VGG16
 # name: 010_NIMA_VGG16
-model_type: NIMAModel
+model_type: DistIQAModel 
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
 
@@ -12,7 +12,7 @@ datasets:
     type: AVADataset
     dataroot_target: ./datasets/AVA_dataset/ava_images/
     meta_info_file: ./datasets/meta_info/meta_info_AVADataset.csv
-    split_file: ./datasets/train_split_info/ava_official_ilgnet.pkl
+    split_file: ./datasets/meta_info/ava_official_ilgnet.pkl
     split_index: 1 # use official split
 
     augment:
@@ -34,7 +34,7 @@ datasets:
     type: AVADataset
     dataroot_target: ./datasets/AVA_dataset/ava_images/
     meta_info_file: ./datasets/meta_info/meta_info_AVADataset.csv
-    split_file: ./datasets/train_split_info/ava_official_ilgnet.pkl
+    split_file: ./datasets/meta_info/ava_official_ilgnet.pkl
     split_index: 1 # use official split
 
     augment:
@@ -60,7 +60,7 @@ path:
 train:
   optim:
     type: Adam
-    lr_basemodel: !!float 5e-5
+    lr_base_model: !!float 5e-5
     lr_classifier: !!float 5e-4
     lr: !!float 1e-4
 
